--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": ">=8.6"
   },
   "scripts": {
-    "test": "mocha && tsc -p ./test/types",
+    "test": "mocha --file unit-error-hack.js --reporter mocha-junit-reporter && tsc -p ./test/types",
     "cover": "nyc --reporter=text --reporter=html mocha"
   },
   "dependencies": {
@@ -34,6 +34,7 @@
     "gulp-format-md": "^2.0.0",
     "inquirer": "^6.2.0",
     "mocha": "^5.2.0",
+    "mocha-junit-reporter": "*",
     "nyc": "^13.1.0",
     "prompts": "^1.2.1",
     "time-require": "github:jonschlinkert/time-require",
